--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,3 @@
-// manifest.json
 {
     "manifest_version": 3,
     "name": "Civil War Photo Sleuth Chatbot",
@@ -8,7 +7,8 @@
         "activeTab",
         "scripting",
         "tabs",
-        "sidePanel"
+        "sidePanel",
+        "storage"
     ],
     "host_permissions": [
         "https://api.perplexity.ai/*",
